fixed backend of Expenses page- front end breaks after adding #148
Fixed this so now you can view any users expenses.
**But after adding a bill, the page breaks for some reason and looks bad #148

--- a/Display_Expenses.css
+++ b/Display_Expenses.css
@@ -1,146 +1,45 @@
 .expense-details {
-    width: 45%;
-    height: 400px;
+    position: fixed;
+    width: 50%;
+    height: 40%;
+    bottom: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    box-sizing: border-box;
     background: #EEE3A4;
     border: 3px solid #000000;
     border-radius: 25px;
-    margin-left: 25%;
-    margin-top: 10%;
+    z-index: 9999;
 }
 
-.expense-details h2 {
-    margin-left: 2.5%;
+.h2 {
+    position: absolute;
     text-align: center;
     width: 100%;
-    font-size: 4vw;
+    bottom: 75%;
+    font-size: 2vw;
     font-family: 'Inter', sans-serif;
 }
 
-.expense-details th, td {
-    border: 3px solid #000000;
+.h3 {
+    position: absolute;
+    bottom: 75%;
+    left: 40%;
+    font-size: 1.5vw;
+    font-family: 'Inter', sans-serif;
 }
-.expense-details table{
+
+table, th, td {
+    border: 3px solid#000000;
+}
+table {
+    text-alignalign: center;
     border-collapse: collapse;
-    font-family: Inter, sans-serif;
-    margin-left: 30%;
-    width: 5%;
-    height: 30px;
-    font-size: 2.5vw;
-}
+    margin-top: 12%;
+    margin-left: 36%;
+    border-radius: 15px;
 
-
-@media only screen and (max-width: 1100px) {
-    .expense-details h2{
-        font-size: 4vw;
-    }
-    .expense-details table{
-        margin-top: 15%;
-        margin-left: 35%;
-        font-size: 3vw;
-    }
-}
-
-@media only screen and (max-width: 1000px) {
-    .expense-details h2{
-        font-size: 4vw;
-    }
-    .expense-details table{
-        margin-top: 15%;
-        margin-left: 30%;
-        font-size: 4vw;
-    }
-}
-
-@media only screen and (max-width: 900px) {
-    .expense-details h2{
-        font-size: 5vw;
-    }
-    .expense-details table{
-        margin-top: 20%;
-        margin-left: 25%;
-        font-size: 4vw;
-
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    .expense-details h2{
-        font-size: 7vw;
-    }
-    .expense-details table{
-        margin-top: 25%;
-        margin-left: 20%;
-        font-size: 4vw;
-    }
-}
-
-@media only screen and (max-width: 700px) {
-    .expense-details h2{
-        font-size: 7vw;
-    }
-    .expense-details table{
-        margin-top: 25%;
-        margin-left: 20%;
-        font-size: 3vw;
-    }
-
-}
-
-@media only screen and (max-width: 600px) {
-    .expense-details h2{
-        font-size: 7vw;
-    }
-    .expense-details table{
-        margin-top: 25%;
-        margin-left: 20%;
-        font-size: 3vw;
-    }
-    .expense-details {
-        width: 45%;
-        height: 250px;
-        background: #EEE3A4;
-        border: 3px solid #000000;
-        border-radius: 25px;
-        margin-left: 25%;
-        margin-top: 10%;
-    }
-}
-
-@media only screen and (max-width: 500px) {
-    .expense-details h2{
-        font-size: 7vw;
-    }
-    .expense-details table{
-        margin-top: 25%;
-        margin-left: 20%;
-        font-size: 4vw;
-    }
-    .expense-details {
-        width: 45%;
-        height: 250px;
-        background: #EEE3A4;
-        border: 3px solid #000000;
-        border-radius: 25px;
-        margin-left: 25%;
-        margin-top: 10%;
-    }
-}
-@media only screen and (max-width: 400px) {
-    .expense-details h2{
-        font-size: 7vw;
-    }
-    .expense-details table{
-        margin-top: 25%;
-        margin-left: 20%;
-        font-size: 4vw;
-    }
-    .expense-details {
-        width: 45%;
-        height: 250px;
-        background: #EEE3A4;
-        border: 3px solid #000000;
-        border-radius: 25px;
-        margin-left: 25%;
-        margin-top: 10%;
-    }
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-size: 2vw;
 }
